# BSky-Kampagnen-Bot

./: .docker-npmrc  .dockerignore  .env.sample  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .npmrc  251202_17:31.md  :electron  AGENTS.md  BSky-Kampagnen-Bot.code-workspace  BSky-Kampagnen-Bot.jsonc  CHANGELOG.md  Codex-Vereinbarungen.md  ETHICS.de.md  ETHICS.en.md  README.en.md  README.md  _remind-me.md  backlog.md  changelog-unreleased.md  codex-plans-backend.md  codex-plans-client.md  codex-plans-shared-ui.md  codex-plans.md  diff.txt  docker-compose.yml  electron-builder.bsky-client.json  eslint.config.mjs  init-requirements.sh  package-lock.json  package.json  refactor_prompt.md  server.js  settings.json  tsconfig.build.json  tsconfig.json  ui-terminology-tests.md  usefull-tests.md  (+1 more)
.codex/: AGENTS.md  AGENTS.project.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
backend/: RELEASE_NOTES_v1.1.0.md  package.json  server.js
bsky-client/: .env.sample  Handbuch.md  index.html  package.json  tailwind.config.js  vite.config.js  vite.config.mjs  vitest.config.mjs  vitest.setup.js
config/: app-customization.json  config.js  search-prefix-hints.de.json  search-prefix-hints.en.json
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.mjs  vite.config.js
docker/: Dockerfile.backend  Dockerfile.bsky-client  Dockerfile.frontend  docker-compose.bsky-client.yml  link-preview-proxy.Dockerfile  nginx-bsky-client.conf.template  nginx-frontend.conf  (+1 more)
docs/: Agent.md  (+20 more)
(+614 files in other folders)
