[package]
name = "bsky-desktop"
version = "0.0.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "api-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = []
